# baiduFace

./: README.md
include/: baidu_face_api.h
include/opencv2/: cvconfig.h
src/: .main.cpp.swp  CMakeLists.txt  compare.cpp  compare.h  cv_help.cpp  cv_help.h  faceAgent.cpp  faceAgent.h  faceControl.cpp  faceControl.h  faceEntity.h  faceLib.h  faceRepo.cpp  faceRepo.h  faceRepoMongo.cpp  faceRepoSql.cpp  faceRepoSql.h  faceService.cpp  faceService.h  featureBuffer.h  featureBufferMemory.cpp  featureBufferMemory.h  featureBufferRedis.cpp  featureBufferRedis.h  http-server.cpp  httpUtil.cpp  httpUtil.h  image_base64.cpp  image_base64.h  image_buf.cpp  image_buf.h  liveness.cpp  liveness.h  main.cpp  personFaceRepo.cpp  personFaceRepo.h  setting.cpp  setting.h  test.cpp  test_face.cpp  (+4 more)
src/build2/: config.ini  install.sh
